update project_id env

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', 
       '--build-arg', 'KEY_FILE=${_KEY_FILE}',
-      '--build-arg', 'GCLOUD_PROJECT_STG=${_GCLOUD_PROJECT_STG}',
+      '--build-arg', 'GCLOUD_PROJECT_STG=$PROJECT_ID',
       '--build-arg', 'GCLOUD_BUCKET=${_GCLOUD_BUCKET}',
       '--build-arg', 'VERSION=${_VERSION}',
       '-t',
